# GA

./: .gitignore  CMakeLists.txt  GTest.cmake
include/GeneticAlgorithm/: Algorithms.cpp  Algorithms.hpp  Binary.hpp  Constants.h  Core.hpp  GeneticAlgorithm.h  Operations.hpp
src/: Algorithms.cpp  Binary.cpp  Core.cpp  Core.hpp  GeneticAlgorithm.cpp  Genotype.cpp  Genotype.h  Linkage.cpp  Linkage.h  Operations.cpp  Operations.hpp  RandUtils.h  Utils.h
tests/: CMakeLists.txt
tests/src/: core.gtest.cpp  main.gtest.cpp  manual.gtest.cpp
